--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     >
     <h1>Welcome to Priyanshu Mishra's World!</h1>
 <br>
-<a href="PersonalInfo.html">PERSONAL DETAILS</a>
+<a href="PersonalInfo.html"target="_blank">PERSONAL DETAILS</a>
 <br>
-<a href="Education.html">EDUCATION DETAILS</a>
+<a href="Education.html"target="_blank">EDUCATION DETAILS</a>
 </body>
 </html>
